Fix overlapping tab rows in 3-row tab trees

--- a/style/core.css
+++ b/style/core.css
@@ -299,7 +299,7 @@ h1.header {
  */
 
 .tabtree {
-    margin: 0 0 8px 0;
+    margin: 0 0 2.5em;
 }
 
 .tabtree ul {
